# Fibonacci.Server

./: CMakeLists.txt  FibonacciGRPCClient.cpp  FibonacciServiceApp.cpp  FibonacciServiceApp.hpp  Readme.md  main.cpp
client/: FibonacciGRPCClient.cpp  FibonacciGRPCClient.hpp
engine/: AbstractFibonacciEngine.cpp  AbstractFibonacciEngine.hpp  CMakeLists.txt  CalculationResult.hpp  IFibonacciEngine.hpp  IFibonacciEngineMonitoringSource.hpp
engine/concrete/: CMakeLists.txt  LinearFibonacciEngine.cpp  LinearFibonacciEngine.hpp  ThreadPoolFibonacciEngine.cpp  ThreadPoolFibonacciEngine.hpp
engine/statistics/: IFiboQueryStatisticHolder.hpp
engine/store/: CMakeLists.txt  HistoryStore.hpp  IFiboQueryHistoryStore.hpp  IFiboQueryStatisticsStore.hpp  StatisticsStore.hpp
engine/store/concrete/: CMakeLists.txt  SimpleHistoryStore.cpp  SimpleHistoryStore.hpp  SimpleStatisticsStore.cpp  SimpleStatisticsStore.hpp
monitor/: CMakeLists.txt  IFibonacciEngineListener.hpp  IFibonacciEngineMonitor.hpp  IFibonacciEngineMonitoringListener.hpp
monitor/concrete/: CMakeLists.txt  StopwatchMonitor.cpp  StopwatchMonitor.hpp
server/: CMakeLists.txt  IFibonacciCalculationQueryListener.hpp  IFibonacciCalculationQuerySource.hpp  IFibonacciServer.hpp
server/concrete/: CMakeLists.txt  gRpcServer.cpp  gRpcServer.hpp
server/gRPC/: CMakeLists.txt  gRPCServer.cpp  gRPCServer.hpp  gRpcServer.cpp  gRpcServer.hpp
server/gRPC/protos/: fibonacci.calculator.proto  fibonacci.server.proto
service/: AbstractFibonacciServiceBuilder.cpp  AbstractFibonacciServiceBuilder.hpp  CMakeLists.txt
service/concrete/: CMakeLists.txt  SimpleFibonacciService.cpp  SimpleFibonacciService.hpp
